# ibus-engine-gui-ci

./: Makefile-sources  Makefile.am  README.md  anthy.json  ciconfig.c  ciconfig.h  common.h  configure.ac  enginetmpl.c  enginetmpl.h  guitest.c  guitest.h  ibus-engine-gui-ci.spec.in  keystrtoval.h  keystrtoval.py  meta.test.in  runtest
cases/: Makefile.am  anthy.json  anthy.xml  ascii.json  hangul.json  m17n-mr-inscript2.json  sayura.json
